<resources>

    <string name="app_name">Demo</string>
    <string name="login">Login</string>
    <string name="forgot_pass">Forgot Password?</string>
    <string name="sign_up">Sign up</string>
    <string name="user_name">Username</string>
    <string name="password">Password</string>
    <string name="incorrect_format">{0} is an incorrect format.</string>
    <string name="duplicate_format">{0} cannot duplicate.</string>
    <string name="error_warning">Opps, something went wrong, try again later.</string>
    <string name="email">Email</string>
    <string name="screen_name">Screen name</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="movie_type">3D</string>
    <string name="imax">IMAX</string>
    <string name="language">Vietnamese</string>
    <string name="movie_category">Action, Honor, Adventure</string>
    <string name="release_date">07/08/2018 - Viet Nam</string>
    <!--transition-->
    <string name="logo_transition">logo_transition</string>
    <string name="image_profile_transition">image_profile_transition</string>
    <string name="logo_content">http://nms.com.vn/</string>

    <!--Menu Name-->
    <string name="menu_home">Home</string>
    <string name="menu_call">Call</string>
    <string name="menu_message">Message</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_logout">Logout</string>
    <string name="skyscarper">skyscraper</string>
    <string name="notification">Notification</string>
    <string name="search">Search</string>
    <string name="friends">Friends</string>
    <string name="theme">Theme</string>
    <string name="profile">Profile</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="theme_blue">Blue</string>
    <string name="theme_purple">Purple</string>
    <string name="ok">OK</string>
    <string name="movie_content_title">Description</string>
    <string name="movie_content">FBI Hostage Rescue Team leader and U.S. war veteran Will Sawyer now assesses security for skyscrapers. On assignment in Hong Kong he finds the tallest, safest building in the world suddenly ablaze and hes been framed for it. A wanted man on the run, Will must find those responsible, clear his name and somehow rescue his family who are trapped inside the building - above the fire line.</string>
</resources>
