<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_movie"
    android:orientation="vertical"
    android:padding="@dimen/activity_vertical_margin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="@dimen/img_movie_width"
            android:layout_height="@dimen/img_movie_height"
            android:contentDescription="@null"
            android:padding="@dimen/extra_small_padding"
            android:src="@drawable/img_logo_movie" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="@dimen/img_movie_height"
            android:orientation="vertical"
            android:paddingEnd="0dp"
            android:paddingStart="@dimen/activity_vertical_margin">

            <TextView
                style="@style/text_view_default"
                android:text="@string/skyscarper"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="@dimen/big_text_size"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical">

                <ImageView
                    style="@style/ic_style"
                    android:contentDescription="@null"
                    android:src="@drawable/ic_star"
                    android:tint="@color/rating_color" />

                <ImageView
                    style="@style/ic_style"
                    android:contentDescription="@null"
                    android:src="@drawable/ic_star"
                    android:tint="@color/rating_color" />

                <ImageView
                    style="@style/ic_style"
                    android:contentDescription="@null"
                    android:src="@drawable/ic_star"
                    android:tint="@color/rating_color" />

                <ImageView
                    style="@style/ic_style"
                    android:contentDescription="@null"
                    android:src="@drawable/ic_star"
                    android:tint="@color/rating_color" />

                <ImageView
                    style="@style/ic_style"
                    android:contentDescription="@null"
                    android:src="@drawable/ic_star" />

                <TextView
                    style="@style/text_view_default"
                    android:layout_marginStart="@dimen/default_padding"
                    android:text="8.5"
                    android:textColor="@color/gray" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin">

                <TextView
                    style="@style/text_view_default"
                    android:background="@drawable/bg_movie_type"
                    android:paddingBottom="@dimen/small_padding"
                    android:paddingLeft="@dimen/default_padding"
                    android:paddingRight="@dimen/default_padding"
                    android:paddingTop="@dimen/small_padding"
                    android:text="@string/movie_type"
                    android:textColor="@color/white" />

                <TextView
                    style="@style/text_view_default"
                    android:layout_marginStart="@dimen/default_padding"
                    android:background="@drawable/bg_type_max"
                    android:paddingBottom="@dimen/small_padding"
                    android:paddingLeft="@dimen/default_padding"
                    android:paddingRight="@dimen/default_padding"
                    android:paddingTop="@dimen/small_padding"
                    android:text="@string/imax"
                    android:textColor="@color/white" />

                <TextView
                    style="@style/text_view_default"
                    android:layout_marginStart="@dimen/default_padding"
                    android:background="@drawable/bg_language"
                    android:paddingBottom="@dimen/small_padding"
                    android:paddingLeft="@dimen/default_padding"
                    android:paddingRight="@dimen/default_padding"
                    android:paddingTop="@dimen/small_padding"
                    android:text="@string/language"
                    android:textColor="@color/white" />
            </LinearLayout>

            <TextView
                style="@style/text_view_default"
                android:layout_marginTop="@dimen/default_padding"
                android:text="@string/movie_category"
                android:textColor="@color/gray" />

            <TextView
                style="@style/text_view_default"
                android:layout_marginTop="@dimen/default_padding"
                android:text="@string/release_date"
                android:textColor="@color/gray" />
        </LinearLayout>
    </LinearLayout>

    <TextView
        style="@style/text_view_default"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_padding"
        android:text="@string/movie_content_title"
        android:textColor="#FFB300"
        android:textSize="@dimen/login_text_size"
        android:textStyle="bold" />

    <TextView
        style="@style/text_view_default"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_padding"
        android:text="@string/movie_content"
        android:textColor="@color/white" />
</LinearLayout>